<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.alberthneerans.punto2.MainActivity"
    android:orientation="vertical">
   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/ingrese"
       android:textSize="20sp"
       android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/numero1"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/eNumero1"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/numero2"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/eNumero2"/>

    </LinearLayout>
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton android:id="@+id/rSuma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suma"
            android:textSize="20sp"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/rResta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resta"
            android:textSize="20sp"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/rMultiplicacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiplicacion"
            android:textSize="20sp"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/rDivision"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/division"
            android:textSize="20sp"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:onClick="onButtonClicked"/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/tRespuesta"
        />

</LinearLayout>
